Update gradebot dependency to v1.4.0 and add ldflags for versioning in builds

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,6 +11,10 @@ builds:
     binary: gradebot
     env:
       - CGO_ENABLED=0
+    ldflags:
+      - -s -w
+      - -X main.version={{.Version}}
+      - -X main.buildID={{.Env.BUILD_ID}}
     tags:
       - osusergo
       - netgo
